--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+}
+.container {
+ width: 100vw;
+ height: 100vh;
+ background-image: linear-gradient(#923B77, #452E6D); 
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+}
+h1 {
+  font-size: 52px;
+  background: -webkit-linear-gradient(#FFBB5A, #F78262);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.newTaskMaker  {
+  width: 20%;
+  height: 30px;
+  margin: 15px 20px 15px 20px;
+  display: flex;
+  justify-content: space-between;
+
+}
+.newTaskMaker input {
+  width: 60%;
+  height: 100%;
+  border: 0;
+  border-radius: 20px;
+  padding-left: 5px;
+  outline: none;
+}
+.newTaskMaker button {
+  width: 30%;
+  height: 100%;
+  border: 0;
+  border-radius: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.listContainer 
+{
+  width: 20%;
+  height: fit-content;
   display: flex;
   flex-direction: column;
+  
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
+/*  */
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.taskLists {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #FFF;
+  border-radius: 20px;
+  padding: 10px;
+  margin: 20px;
+}
+.leftSide {
+  width: 80%;
+  height: 100%;
+  display: flex;
+}
+.jagsaalt {
+  color: #F78262;
+}
+.trash {
+  width: 10%;
+  height: 100%;
+  border-radius: 20px;
+  border: 0;
+}
+.tasks {
+  padding-left: 5px;
 }
